# sovereign-droid

./: ARCHITECTURE.md  BASELINE_VERIFICATION.md  DEV_ENV.md  Makefile  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_4_PLANNING.md  PHASE_5.md  README.md  ROADMAP.md  VERSION_LOCK.md  clean.sh  dev.sh  env.sh  gradle_error.txt  log.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/sovereigndroid/core/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  device_capabilities.c  device_capabilities.h  device_identity.c  device_identity.h  input.c  input.h  native_activity.c  renderer.c  renderer.h  renderer_geometry.c  renderer_geometry.h  renderer_math.c  renderer_math.h  secure_storage.c  secure_storage.h  sovereign_core.c  sovereign_core.h  sovereign_crypto.c  sovereign_crypto.h  sovereign_ed25519.c  sovereign_ed25519.h  sovereign_sha512.c  sovereign_sha512.h
app/src/main/cpp/openssl/: README.md
app/src/main/res/layout/: joystick_overlay.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sovereigndroid/core/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
